correct spacing issue with email input area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,13 @@ input.submit-button {
     border-radius: 10px;
     
 }
+
+input#email {
+    margin-bottom: 8px;
+    border-raidus: 4px;
+
+}
+
   textarea {
     width: 100%;
     height: 100px;
